--- a/XamarinApp/XamarinApp/Views/Profile.xaml
+++ b/XamarinApp/XamarinApp/Views/Profile.xaml
@@ -2,6 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              Title="Profile"
+              xmlns:xf="clr-namespace:Xamarin.Forms;assembly=WrapLayoutDemo"
              x:Class="XamarinApp.Views.Profile">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <xf:WrapLayout Orientation="Horizontal">
+    <Button Text="Button A" />
+    <Button Text="Button B" />
+    <Button Text="Button C" />
+    <Button Text="Button D" />
+    <Button Text="Button E" />
+  </xf:WrapLayout>
 </ContentPage>
