--- a/XamarinApp/XamarinApp/Views/Home.xaml
+++ b/XamarinApp/XamarinApp/Views/Home.xaml
@@ -2,35 +2,53 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              Title="Home"
+             BackgroundColor="White"
              x:Class="XamarinApp.Views.Home">
-  <ListView ItemsSource="{Binding Jobs}" >
+  <ListView ItemsSource="{Binding Jobs}" SelectedItem="{Binding SelectedJob}" HasUnevenRows="True" SeparatorVisibility="Default" SeparatorColor="Black" >
+    <ListView.GestureRecognizers>
+      <TapGestureRecognizer
+              Command="{Binding CompleteChecked}" />
+    </ListView.GestureRecognizers>
     <ListView.ItemTemplate>
       <DataTemplate>
         <ViewCell>
           <Grid>
             <Grid.RowDefinitions>
               <RowDefinition Height="Auto" />
-              <RowDefinition Height="10" />
+              <RowDefinition Height="5" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="5" />
               <ColumnDefinition Width="Auto" />
+              <ColumnDefinition Width="5" />
               <ColumnDefinition Width="*" />
               <ColumnDefinition Width="Auto" />
+              <ColumnDefinition Width="8" />
             </Grid.ColumnDefinitions>
 
-            <Image Source="{Binding JobImage}" Grid.Column="0" />
+            <Image HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Source="{Binding JobImagePath}" Grid.Column="1" />
 
-            <StackLayout Grid.Column="1" >
-              <Label Text="{Binding JobName}" />
-              <Label Text="{Binding HoursSpent,StringFormat='{0} Hour(s)'}" />
-              <Label Text="{Binding RunningCost,StringFormat='R {0}'}"  />
+            <StackLayout Grid.Column="3" >
+              <Label Text="{Binding JobName}" FontSize="18" FontFamily="Tahoma"/>
+              <Label Text="{Binding HoursSpent,StringFormat='{0} Hour(s)'}" FontSize="15" FontFamily="Arial" TextColor="Gray"/>
+              <Label Text="{Binding RunningCost,StringFormat='R {0}'}" FontAttributes="Bold"  FontSize="13" TextColor="Gray"/>
             </StackLayout>
 
-            <Image Grid.Column="2"/>
+            <Image Grid.Column="4" Source="CheckBoxB.png" HeightRequest="32">
+              <Image.GestureRecognizers>
+                <TapGestureRecognizer
+                        Command="{Binding CompleteChecked}" />
+              </Image.GestureRecognizers>
+            </Image>
+
+            <Image Grid.Column="4" Source="tick.png" HeightRequest="28" IsVisible="{Binding IsComplete}">
+              
+            </Image>
 
           </Grid>
         </ViewCell>
       </DataTemplate>
     </ListView.ItemTemplate>
+  
   </ListView>
 </ContentPage>
